Added release mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(feup-aed)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(CREATE_EXE TRUE)
+
 set(SOURCE_FILES
 		src/Airline.cpp
 		src/Airport.cpp
@@ -37,13 +39,18 @@ set(TEST_FILES
 
 include_directories(src)
 
-add_subdirectory(tests/googletest)
-include_directories(tests/googletest/googletest/include)
-include_directories(tests/googletest/googlemock/include)
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+	add_subdirectory(tests/googletest)
+	include_directories(tests/googletest/googletest/include)
+	include_directories(tests/googletest/googlemock/include)
 
-add_executable(${CMAKE_PROJECT_NAME}_run main.cpp ${TEST_FILES} ${SOURCE_FILES})
+	add_executable(${CMAKE_PROJECT_NAME}_run mainTest.cpp ${TEST_FILES} ${SOURCE_FILES})
 
-target_link_libraries(${CMAKE_PROJECT_NAME}_run gtest gtest_main)
+	target_link_libraries(${CMAKE_PROJECT_NAME}_run gtest gtest_main)
+	message("Debug mode")
+endif()
 
-
-
+if (CMAKE_BUILD_TYPE MATCHES Release)
+	add_executable(${CMAKE_PROJECT_NAME}_run main.cpp ${SOURCE_FILES})
+	message("Release mode")
+endif()
